--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3226,7 +3226,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #661abd;
 		}
 
 		.wrapper.style1-alt {
@@ -3234,7 +3234,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #4143ad;
 		}
 
 		.wrapper.style2-alt {
@@ -3242,7 +3242,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #b83788;
 		}
 
 		.wrapper.style3-alt {
