--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,7 +116,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: rgba(255, 255, 255, 0.55);
-		font-family: "Helvetica", "Arial";
+		font-family: "Raleway", "Helvetica", "Arial";
 		font-size: 16.5pt;
 		font-weight: normal;
 		line-height: 1.75;
